syntax = "proto3";

package file;

import "google/protobuf/timestamp.proto";

option go_package = "./internal/api";

service FileService {
    rpc UploadFile (UploadFileRequest) returns (UploadFileResponse);
    rpc ViewFiles (ViewFilesRequest) returns (ViewFilesResponse);
    rpc DownloadFile (DownloadFileRequest) returns (DownloadFileResponse);
}

message UploadFileRequest {
    string filename = 1;
    bytes data = 2;
}

message UploadFileResponse {
    string file_id = 1;
}

message ViewFilesRequest {
    uint32 limit = 1;
    uint32 offset = 2;
}

message ViewFilesResponse {
    message FileInfo {
        string filename = 1;
        google.protobuf.Timestamp created_at = 2;
        google.protobuf.Timestamp updated_at = 3;
    }
    repeated FileInfo files = 1;
}

message DownloadFileRequest {
    string file_id = 1;
}

message DownloadFileResponse {
    bytes data = 1;
    string filename = 2;
}